# ipme

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.orig  Dockerfile  README.md  bitbucket-pipelines.yml  build_ipme_docker.sh
demos/: CMakeLists.txt
demos/camera_zoom/: CMakeLists.txt  camera_zoom.cpp
demos/hello_walabot/: CMakeLists.txt  example_output_1.txt  hello_walabot.cpp
demos/omicron/: CMakeLists.txt  client_connect.cpp  vicon_visualizer.cpp
demos/vtk/: CMakeLists.txt  dump_vtkpolydata.cpp
doc/reports/2017_spring/: Makefile
doc/reports/2017_spring/sections/: intro.tex  plans.tex
examples/: CMakeLists.txt  dlib_metric_learning.cpp
examples/hello_walabot/: CMakeLists.txt  hello_walabot.cpp
lib/: CMakeLists.txt
lib/core/: point.cpp  point.h  polygon.cpp  polygon.h
lib/data/: person.cpp  person.h  point3d.h  point3d.ipp  scene.cpp  scene.h  scene.h.autosave  trackable_factory.cpp  trackable_factory.h  trackable_object.cpp  trackable_object.h  vicon_point.h
lib/io/: json_parser.cpp  json_parser.h  parser.cpp  parser.h
lib/protobuf/: CMakeLists.txt  scene.proto
lib/sensor/: CMakeLists.txt  receiver.h  receiver3d.h  sensor.cpp  sensor.h  vicon_3dwriter.cpp  vicon_3dwriter.h  vicon_csvwriter.cpp  vicon_csvwriter.h  vicon_datahandler.h  vicon_eventlogger.cpp  vicon_eventlogger.h  vicon_listener.cpp  vicon_listener.h  vrpn_handler.cpp  vrpn_handler.h  walabot.cpp  walabot.h  walabot3d.h  walabot3d.ipp  walabot_receiver_write.ipp  walabot_receiver_writer.h  walabot_receiver_writer.ipp
lib/utils/: CMakeLists.txt  config.cpp  config.h  json.cpp  json.h  json.ipp  logger.cpp  logger.h  omicron_config.cpp  omicron_config.h  random.h  random.ipp  string_utils.cpp  string_utils.h  utils.cpp  utils.h
lib/visualization/: point3d.h  point3d.ipp  polydata.h  polydata.ipp
python/: Pipfile  analyse-classroom.py  analyse.py  analyze-3.py  analyze-averages.py  combine-sideways.py  compute-averages.py  compute-classroom-associations.py  compute-study-associations.py  learn_metric.py  run-analysis.py  run-multiscreen-analysis.py  setup.sh
python/utils/: log.py
reports/: .gitignore
reports/2017_spring/: bibliography.bib  report.tex
reports/2017_spring/sections/: equipment.tex  experiments.tex  literature_survey.tex
scripts/: .gitignore  aggregate_frames.py  analyze_scenes.py  config.json  extract_frames.py  process_vicon.py  show_data.py
scripts/analysis/: experiment.py
scripts/ipme_utils/: ipme_utils.py
scripts/notebooks/: analysis.ipynb
scripts/pb/: scene_pb2.py
sensor/: CMakeLists.txt  receiver.h  sensor.h  walabot.cpp  walabot.h
tests/: CMakeLists.txt  vicon_listener_unittest.cpp
tools/: CMakeLists.txt  CMakeLists.txt.orig
tools/data_collection/: CMakeLists.txt  config.json  vicon_record_csv.cpp
tools/debug_tool/: CMakeLists.txt  main.cpp
tools/signal_server/: CMakeLists.txt  main.cpp
tools/streaming_server/: CMakeLists.txt  main.cpp
tools/utilities/: CMakeLists.txt  convertpb.cpp
tools/visualization/: CMakeLists.txt  csvtovtp.cpp  scene_dumper.cpp
tools/workbench/: CMakeLists.txt  README.md  color.cpp  color.h  config.cpp  config.h  display.cpp  display.h  display_manager.cpp  display_manager.h  display_session.cpp  display_session.h  frame.cpp  frame.h  frame.ipp  frame_collection.cpp  frame_collection.h  frame_model.cpp  frame_model.h  geometry.cpp  geometry.h  live_window.cpp  live_window.h  live_window.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  point.cpp  point.h  resources.qrc  sage_handler.cpp  sage_handler.h  sage_message_handler.h  sage_messages.h  sage_session.cpp  sage_session.h  scene_modifier.cpp  scene_modifier.h  scene_object.cpp  (+20 more)
tools/workbench/configs/: basic.json  continuum.json  local_sage.json  sage2cloud.json
tools/workbench/sage/: create_app_window_handler.cpp  create_app_window_handler.h  default_sage_message_handler.cpp  default_sage_message_handler.h  sage_element.cpp  sage_element.h  sage_element_container.cpp  sage_element_container.h  update_item_order_handler.cpp  update_item_order_handler.h
